--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>css測試</title>
   <style>
-    h1{
+    .h1{
       color: #b5d9dc;
     }
     .card{
       background-color: aqua;
+    }
+    .h2{
+        background-color: blueviolet;
     }
   </style>
 </head>
@@ -16,6 +19,10 @@
 <h1>H1的測試</h1>
 <div class="card">
   這是一個測試網站
+</div>
+<br>
+<div class="h2">
+    今天是3月7日
 </div>
 </body>
 </html>
